# expense-manager

./: Cargo.toml  build.rs
proto/: transaction.proto
resources/: expenses.txt  transactions.json
src/: commands.rs  lib.rs  main.rs  tree.rs
