[package]
name = "expense-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
console = "0.16.0"
dialoguer = "0.11.0"
pbjson = "0.8.0"
pbjson-types = "0.8.0"
prost = "0.14.1"
prost-types = "0.14.1"
serde = "1.0.219"
serde_json = "1.0.143"

[build-dependencies]
pbjson-build = "0.8.0"
prost-build = "0.14.1"
